//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Account {
  id String [pk]
  userId String [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  user User [not null]
  refresh_token_expires_in Int

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table Session {
  id String [pk]
  sessionToken String [unique, not null]
  userId String [not null]
  expires DateTime [not null]
  user User [not null]
}

Table User {
  id String [pk]
  name String [not null]
  email String [unique, not null]
  hashed_password String [not null]
  emailVerified DateTime
  image String
  accounts Account [not null]
  sessions Session [not null]
  group Group [not null]
  groupId String [not null]
  assignedClaim AssignedClaim [not null]
}

Table Group {
  id String [pk]
  permission Permission [not null]
  user User [not null]
}

Table Permission {
  id Int [pk]
  permission PermissionList [not null]
  group Group [not null]
}

Table ClaimCategory {
  id String [pk]
  name String [not null]
  assignedClaim AssignedClaim [not null]
}

Table AssignedClaim {
  id String [pk]
  name String [not null]
  value Float [not null]
  perClaimLimit Float
  isPerMonth Boolean [not null, default: false]
  isCustomDate Boolean [not null, default: false]
  dateStart DateTime
  dateEnd DateTime
  year Int [not null]
  claimCategory ClaimCategory [not null]
  requestedClaim RequestedClaim [not null]
  user User
  userId String
  claimCategoryId String [not null]
}

Table RequestedClaim {
  id String [pk]
  value Float [not null]
  status RequestedClaimStatus [not null, default: 'PENDING']
  AssignedClaim AssignedClaim
  assignedClaimId String
}

Table GroupToPermission {
  permissionId Int [ref: > Permission.id]
  groupId String [ref: > Group.id]
}

Enum PermissionList {
  LOGIN
  LOGOUT
  REQUEST_CLAIM
  ASSIGN_CLAIM
  GET_USER_CLAIMS
  GET_SELF_CLAIMS
  PAGE_PERMISSION_REIMBURSEMENT
  PAGE_PERMISSION_CYPRESS_REPORT
}

Enum RequestedClaimStatus {
  PENDING
  APPROVED
  REJECTED
}

Ref: Account.userId > User.id [delete: Cascade]

Ref: Session.userId > User.id [delete: Cascade]

Ref: User.groupId > Group.id

Ref: AssignedClaim.claimCategoryId > ClaimCategory.id

Ref: AssignedClaim.userId > User.id

Ref: RequestedClaim.assignedClaimId > AssignedClaim.id